media queries now not exclusive to mobile devices, spacing fixed in footer, spacing fixed in 3 cards on home page

--- a/src/components/contact/scss/_responsive.scss
+++ b/src/components/contact/scss/_responsive.scss
@@ -10,6 +10,10 @@
     background-position: 0 0;
   }
 
+  .didYouKnow .hero {
+    background-position: center;
+  }
+
   .map {
     max-width: 75%;
     height: 400px;
