--- a/src/components/home/scss/_carousel.scss
+++ b/src/components/home/scss/_carousel.scss
@@ -113,7 +113,7 @@ $buttonSize: 7rem;
   height: 150px;
   background: none;
   position: absolute;
-  top: 40%;
+  top: 45%;
   z-index: 8;
 
   &:hover {
