--- a/src/components/home/scss/styles.scss
+++ b/src/components/home/scss/styles.scss
@@ -52,10 +52,12 @@ section {
 			border-bottom-right-radius: 15px;
 			margin: 30px 0;
 			filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.5));
+
 		}
 
 		.links__container {
-
+			position: relative;
+			
 			h2, p{
 				margin: 0 auto;
 				max-width: 80%;
@@ -72,7 +74,6 @@ section {
 				font-size: 1.6rem;
 				color: white;
 				text-transform: uppercase;
-				background: $secondaryColour;
 				font-weight: normal;
 				padding: 5px 35px;
 				position: absolute;
@@ -81,7 +82,7 @@ section {
 			}
 
 			p {
-				min-height: 120px;
+				min-height: 250px;
 				padding-top: 10px;
 			}
 
@@ -94,8 +95,8 @@ section {
 				border-radius: 8px;
 				padding: 6px;
 				font-size: 1.6rem;
-				position: relative;
-				bottom: 0px;
+				position: absolute;
+				bottom: 0;
 
 				&:hover {
 					background: $primaryColour;
@@ -108,6 +109,7 @@ section {
 			height: 200px;
 			background-size: cover;
 			background-repeat: no-repeat;
+			background-position: top;
 			cursor: pointer;
 
 			&:hover {
